hphp/hack/test/typecheck/expression_trees/static_method_call.php.like_types.exp
File "static_method_call.php", line 14, characters 20-38:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "static_method_call.php", line 14, characters 33-37:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 33, characters 5-45:
  But got `dynamic` because it is an unenforceable type
