hphp/hack/test/typecheck/expression_trees/static_method_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

final class MyClass {
  public static async function bar(
    ExampleContext $_,
  ): Awaitable<ExprTree<ExampleDsl, ExampleDsl::TAst, ExampleFunction<(function(ExampleString): ExampleInt)>>> {
    throw new Exception();
  }
}

function foo(): void {
  $fun_call = ExampleDsl`MyClass::bar("baz")`;
}
